# lci-cpp

./: .clang-format  .clang-tidy  .dartai-locks.json  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MIGRATION.md  README.md  TESTING.md  demo.txt  install.ps1  install.sh  vcpkg.json
packaging/python/: README.md  pyproject.toml
packaging/python/lci_cli/: __init__.py  installer.py
src/: CMakeLists.txt  error.cpp  string_pool.cpp
src/analysis/: call_graph.cpp  ci_vocabulary_analyzer.cpp  codebase_intelligence.cpp  coupling_analyzer.cpp  feature_analyzer.cpp  health_analyzer.cpp  layer_analyzer.cpp  metrics_calculator.cpp  module_analyzer.cpp  naming_analyzer.cpp  side_effect_analyzer.cpp  token_budget.cpp
src/cli/: ast_filters.h  cli_core.cpp  commands.cpp  debug.cpp  grep_filters.h  main.cpp  mcp.cpp  name_aggregation.h  profiling.cpp  profiling.h  query_parser.h  rank_options.h  search.cpp  server.cpp  status.cpp  symbol_filters.h  tree_formatter.h  update.cpp
src/config/: config.cpp  gitignore.cpp
src/core/: context_lookup.cpp  context_lookup_ai.cpp  context_lookup_relationships.cpp  context_lookup_semantic.cpp  context_lookup_structure.cpp  context_lookup_usage.cpp  context_lookup_variables.cpp  file_content_store.cpp  file_loader.cpp  file_service.cpp  graph_propagator.cpp  import_resolver.cpp  line_scanner.cpp  portable.cpp  postings.cpp  reference_tracker.cpp  semantic_annotator.cpp  subprocess.cpp  symbol_store.cpp  trigram.cpp  trigram_bucketing.cpp
src/git/: analyzer.cpp  frequency_analyzer.cpp  pattern_detector.cpp  provider.cpp  serialize.cpp  types.cpp
src/indexing/: binary_detector.cpp  debounced_rebuilder.cpp  deleted_file_tracker.cpp  index_locks.cpp  master_index.cpp  master_index_search.cpp  pipeline.cpp  pipeline_integrator.cpp  pipeline_processor.cpp  pipeline_progress.cpp  pipeline_scanner.cpp  trigram_merger.cpp  watcher.cpp
src/mcp/: context_manifest_expander.cpp  formatter_compact.cpp  handlers_analysis.cpp  handlers_context.cpp  handlers_core.cpp  handlers_explore.cpp  handlers_index.cpp  pagination.cpp  response.cpp  server.cpp  validation.cpp
src/parser/: parse_methods.cpp  parser.cpp  parser_pool.cpp  unified_extractor.cpp  unified_extractor_references.cpp  unified_extractor_side_effects.cpp  unified_extractor_types.cpp
src/regex_analyzer/: engine.cpp
src/search/: engine.cpp  engine_context.cpp  requirements_analyzer.cpp  search_coordinator.cpp  semantic_filter.cpp
src/semantic/: fuzzy_matcher.cpp  name_splitter.cpp  score_types.cpp  semantic_scorer.cpp  stemmer.cpp  synonym_table.cpp  vocabulary_analyzer.cpp
src/server/: client.cpp  handlers_search.cpp  server.cpp
src/symbollinker/: csharp_linker.cpp  go_linker.cpp  js_linker.cpp  linker_engine.cpp  php_linker.cpp  python_linker.cpp
src/update/: updater.cpp
tests/: CMakeLists.txt  analysis_test.cpp  call_graph_test.cpp  cli_test.cpp  client_test.cpp  codebase_intelligence_test.cpp  config_test.cpp  error_string_pool_test.cpp  file_content_store_test.cpp  git_test.cpp  gitignore_test.cpp  go_js_linker_test.cpp  idcodec_test.cpp  index_performance_test.cpp  integrator_test.cpp  json_schema_smoketest.cpp  language_extraction_test.cpp  language_map_test.cpp  line_scanner_file_service_test.cpp  linker_engine_test.cpp  master_index_search_test.cpp  master_index_test.cpp  mcp_handlers_analysis_test.cpp  mcp_handlers_context_test.cpp  mcp_handlers_core_test.cpp  mcp_handlers_explore_index_test.cpp  mcp_server_test.cpp  mcp_validation_pagination_test.cpp  parser_pool_test.cpp  php_integration_linker_test.cpp  pipeline_test.cpp  portable_test.cpp  python_csharp_linker_test.cpp  reference_tracker_test.cpp  regex_analyzer_test.cpp  search_engine_test.cpp  semantic_test.cpp  server_test.cpp  side_effect_analyzer_test.cpp  side_effects_test.cpp  (+9 more)
tests/benchmarks/: bench_parity.py  benchmark_main.cpp  real_project_advanced_benchmarks.cpp  real_project_benchmarks.cpp
tests/benchmarks/baseline/: linux-x64.json
tests/data/porter2_fixture/: README.md
tests/fixtures/: sample_cpp.txt  sample_go.txt  sample_js.txt  sample_py.txt
tests/fuzz/: README.md  fuzz_find_files.cpp  fuzz_fixture.h  fuzz_get_context.cpp  fuzz_mcp_dispatch.cpp  fuzz_regex_classifier.cpp  fuzz_search_input.cpp  fuzz_symbol_extract.cpp  fuzz_trigram_extract.cpp
tests/helpers/: concurrent_helpers.h  isolated_test_env.h  performance_guards.h  real_project_helpers.h  test_git.h  test_helpers_test.cpp  test_socket.h  unique_temp.h
tests/integration/: README.md  mcp_tools_integration_test.cpp  pipeline_integration_test.cpp  real_project_analysis_test.cpp  real_project_context_test.cpp  real_project_feature_audit_test.cpp  real_project_integration_test.cpp  real_project_languages_test.cpp  real_project_performance_test.cpp  real_project_phrase_test.cpp  real_project_side_effects_test.cpp  real_project_typescript_test.cpp  search_parity_test.cpp  server_lifecycle_test.cpp  spec_migration_test.cpp  spec_runner.cpp  spec_runner.h
tests/integration/cli/: version.spec.json
tests/integration/http/: browse-file.spec.json  definition.spec.json  fileinfo.spec.json  git-analyze.spec.json  inspect-symbol.spec.json  list-symbols.spec.json  ping.spec.json  references.spec.json  reindex.spec.json  search.spec.json  stats.spec.json  status.spec.json  tree.spec.json
tests/integration/index/: KNOWN_DIVERGENCE.md  synthetic-multilang.spec.json
tests/integration/mcp/: KNOWN_DIVERGENCE.md
tests/integration/probes/: deps.spec.json  export.spec.json  graph.spec.json
tests/lib/spec_diff/: CMakeLists.txt
tests/parity/: CMakeLists.txt  KNOWN_FAILURES.md  MASK_AUDIT.md  MODULE_MAP.md  README.md
tests/parity/corpora/: .gitignore  prep_real.sh
tests/parity/diff_engine/: canonicalize.cpp  canonicalize.h  diff.cpp  diff.h  field_tier.cpp  field_tier.h
tests/parity/runner/: descriptor.cpp  descriptor.h  ignore_baseline.h  parity_runner.cpp
tests/parity/scripts/: mask_audit.py  orphan_cleanup.sh
tests/parity/unit_tests/: canonicalize_test.cpp  descriptor_test.cpp  diff_test.cpp  field_tier_test.cpp  (+2 more)
(+624 files in other folders)
